--- a/DR/app/src/main/res/values/strings.xml
+++ b/DR/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="search">Search</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="select_your_doctor">Select Your doctor</string>
+    <string name="chanel">Chanel</string>
 </resources>
