--- a/DR/app/src/main/res/values/strings.xml
+++ b/DR/app/src/main/res/values/strings.xml
@@ -39,4 +39,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="select_your_doctor">Select Your doctor</string>
     <string name="chanel">Chanel</string>
+    <string name="appointment_for">Appointment For:</string>
+    <string name="yourself">Yourself</string>
+    <string name="other">Other</string>
+    <string name="todo">TODO</string>
 </resources>
