--- a/DR/app/src/main/res/values/strings.xml
+++ b/DR/app/src/main/res/values/strings.xml
@@ -43,4 +43,9 @@
     <string name="yourself">Yourself</string>
     <string name="other">Other</string>
     <string name="todo">TODO</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="address">Address</string>
+    <string name="email_address">Email Address</string>
+    <string name="name">Name</string>
+    <string name="patient_name">Patient Name</string>
 </resources>
